ethnic CRUD successful implementation
