# documentation/swagger-ethnic.json
@@ -6,7 +6,7 @@
         "version": "2.0"
     },
 
-    "basePath": "https://string-wkh7.onrender.com/",
+  
     "schemes": [
         "http", 
         "https" ],
@@ -16,12 +16,9 @@
         {
             "url": "http://localhost:6060", 
             "description": "local development"
-        },
-
-        {
-            "url": "https://render.com/rest", 
-            "description": "Production development"
         }
+
+       
         
     
     ], 
@@ -219,7 +216,7 @@
 
             "description": "Updates information",
 
-            "responsese": {
+            "responses": {
                 "200": { "description": "Updated" },
                 "401": { "description": "Bad request" },
                 "402": { "description": "Unauthorized" },
@@ -267,7 +264,7 @@
     }, 
 
 
-    "/ethnic/{id}": {
+    "/ethnic-del/{id}": {
         "delete": {
             "tags": [ "Ethnic"],
 
@@ -364,36 +361,12 @@
        
     },
 
-    "/delicacy/{id}": {
-        "get": {
-            "tags":["Delicacies"],
-            "parameters":[],
-            "responses":{
-                "200": {
-                    "description": "OK",
-                    "content" :{
-                        "application/json": {
-                            "schema":{
-                                "type": "object",
-                                "example": {
-                                    "name": "pete"
-                                }
-
-                            }
-                        }
-                    }
-                },
-                "400": {
-                    "description":"Bad request"
-                }
-            }
-        }
-    },
+    
 
     "/delicacy-post": {
         "post": {
             "tags":["Delicacies"],
-            
+            "summary": "writing a delicacy",
             "produces":[ "application/json" ],
             
             "parameters":[
@@ -438,6 +411,41 @@
                     "in": "path",
                     "required": true,
                     "type": "string"
+                }
+            ]
+
+        }
+    },
+
+    "/delicacy-put/{id}": {
+        "put":{
+            "tags":["Delicacies"],
+            "summary": "Update a specific delicacy",
+            "responses": {
+                "200":{"description":"OK"},
+                "400": {"description":"Bad request"},
+                "500": {"description": "Internal error"}
+            },
+            "parameters": [
+                {
+                    "name": "id",
+                    "in": "path",
+                    "required": true,
+                    "type": "string"
+                }, 
+                {
+                    "name": "body",
+                    "in": "body",
+                    
+                    "schema": {
+                        "type": "object",
+                        "properties": {
+                            "name": { "example": "any" },
+                            "ethnic":{ "example": "any"},
+                            "ingredients": {"example":"any"},
+                            "method":{"example":"any"}
+                        }
+                    }
                 }
             ]
 
