# routes/ethnic-rout.js
@@ -1,10 +1,17 @@
-const router = require("express").Router;
+const router = require("express").Router();
 const ethnic = require("../controller/ethnic");
 
 
 
 
-r
+router.use("/ethnics", ethnic.ethnics);
+router.use("/ethnic/:id", ethnic.ethnicSingle);
+router.use("/ethnic-post", ethnic.ethnicPost);
+router.use("/ethnic-put/:id", ethnic.ethnicPutId);
+router.use("/ethnic-del/:id", ethnic.ethnicDel)
+
+module.exports = router;
+
 
 
 
